tests/snapshots/serde__de_error_prototype_syntax.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew SyntaxError(\"foo\")"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        name: SyntaxError,
        message: Some(
            OneByte("foo"),
        ),
        stack: Some(
            OneByte("SyntaxError: foo\n    at <anonymous>:1:1"),
        ),
        cause: None,
    },
}

