tests/snapshots/serde__de_error_prototype_type.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew TypeError(\"foo\")"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        name: TypeError,
        message: Some(
            OneByte("foo"),
        ),
        stack: Some(
            OneByte("TypeError: foo\n    at <anonymous>:1:1"),
        ),
        cause: None,
    },
}

