tests/snapshots/serde__de_error_prototype_uri.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew URIError(\"foo\")"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        name: UriError,
        message: Some(
            OneByte("foo"),
        ),
        stack: Some(
            OneByte("URIError: foo\n    at <anonymous>:1:1"),
        ),
        cause: None,
    },
}

